# Racing_simulator

./: App.vcxproj  App.vcxproj.filters  CMakeLists.txt  Library.vcxproj  Library.vcxproj.filters  RacingSimulator.sln  Racing_simulator.sln  Racing_simulator.vcxproj  StartRacing.cpp  StartRacing.h  main.cpp
DynLib/: AirVehicle.cpp  AirVehicle.h  AllTerrainBoots.cpp  AllTerrainBoots.h  Broomstick.cpp  Broomstick.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  FlyingCarpet.cpp  FlyingCarpet.h  GroundVehicle.cpp  GroundVehicle.h  Race.cpp  Race.h  RaceResult.cpp  RaceResult.h  RaceResultReport.cpp  RaceResultReport.h  RaceType.h  Vehicle.cpp  Vehicle.h  VehicleAssignment.cpp  VehicleAssignment.h  VehicleAssignmentReport.cpp  VehicleAssignmentReport.h  VehicleAssignmentResult.h  VehicleType.h
RacingSimulatorApp/: main.cpp
TransportDynamicLibrary/: TransportDynamicLibrary.vcxproj
