cmake_minimum_required(VERSION 3.10)
project(RacingSimulator)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set (SOURCES_EXE StartRacing.cpp main.cpp) 
set (HEADERS_EXE StartRacing.h)
set (SOURCES_LIB DynLib/GroundVehicle.cpp DynLib/Camel.cpp DynLib/Race.cpp DynLib/Vehicle.cpp DynLib/FastCamel.cpp DynLib/Centaur.cpp DynLib/AllTerrainBoots.cpp DynLib/AirVehicle.cpp DynLib/FlyingCarpet.cpp DynLib/Eagle.cpp DynLib/Broomstick.cpp DynLib/RaceResult.cpp DynLib/RaceResultReport.cpp DynLib/VehicleAssignment.cpp DynLib/VehicleAssignmentReport.cpp) 
set (HEADERS_LIB DynLib/Camel.h DynLib/GroundVehicle.h DynLib/Race.h DynLib/Vehicle.h DynLib/FastCamel.h DynLib/Centaur.h DynLib/AllTerrainBoots.h DynLib/AirVehicle.h DynLib/FlyingCarpet.h DynLib/Eagle.h DynLib/Broomstick.h DynLib/RaceResult.h DynLib/RaceResultReport.h DynLib/VehicleAssignment.h DynLib/VehicleAssignmentReport.h DynLib/RaceType.h DynLib/VehicleType.h)
include_directories("DynLib/")
add_library(Library SHARED ${SOURCES_LIB} ${HEADERS_LIB}) 
add_executable(App ${SOURCES_EXE} ${HEADERS_EXE})
target_link_libraries(App Library)